Change server port to Atenea

--- a/atenea/atenea.yml
+++ b/atenea/atenea.yml
@@ -5,4 +5,5 @@ spring:
         jdbc:
           lob:
             non_contextual_creation:  true
-
+  hateoas:
+    use-hal-as-default-json-media-type: false
